# radar-eventos

./: .env.example  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: prompt.txt  prompt_lmstudio.txt  settings.json  sources.json
config/prompts/: prompt.txt  prompt_lmstudio.txt  system_prompt.txt  user_prompt.txt
config/templates/: email_html.html  email_plain.txt  email_subject.txt  report_html.html  teams_body.txt  teams_title.txt
data/: known_events.json
reports/: 2026-05-05_22-55_events.html  2026-05-05_22-55_events.txt  2026-05-05_23-02_events.html  latest_new_events.html  latest_new_events.txt  test_new_events.html  test_new_events.txt
scripts/: generate_html.py  test_fetch.py  test_report.py  test_scan.py
src/: config.py  events.py  extractor.py  fetcher.py  lmstudio_web_mcp_server.py  log_setup.py  mcp_server.py  reports.py  scanner.py  web_tools.py
src/llm/: __init__.py  anthropic.py  lmstudio.py  openrouter.py
src/notifications/: __init__.py  email.py  teams.py
